[package]
name = "gartrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.150"
serde_json = "1.0.89"
serde_derive = "1.0.151"
axum = "0.6.1"
chrono = "0.4.23"
tokio = { version = "1.23.0", features = [ "full" ] }
tokio-postgres = "0.7.7"
async-trait = "0.1.59"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]